added footer for blog post

--- a/app/views/blog/cenit_integration_client_on_odoo.html.erb
+++ b/app/views/blog/cenit_integration_client_on_odoo.html.erb
@@ -67,6 +67,8 @@
               <p>Not much, right? But there are many out-of-the-box integrations already available for you, some of them are even free.</p>
 
               <p>And that's that for this screencast. See you on the next one!</p>
+              
+              <%= render 'footer' %>
   
           </div>
 
