--- a/app/views/blog/first_anniversary.html.erb
+++ b/app/views/blog/first_anniversary.html.erb
@@ -77,6 +77,8 @@
               This post run you as one of the basic things we can do to get early customers when we aren't well-know. So this is the first 
               of many post in our blog, see you folks!
             </p>
+            
+            <%= render 'footer' %>
           </div>        
         </div>
       </div>
