--- a/app/views/blog/installing_twitter_integration_on_odoo.html.erb
+++ b/app/views/blog/installing_twitter_integration_on_odoo.html.erb
@@ -67,6 +67,8 @@
             <p>This screencast ends here, but check the next one to learn how to post tweets automatically under specific conditions.</p>
 
             <p>See you around.</p>
+            
+            <%= render 'footer' %>
           </div>
 
         </div>
