--- a/app/views/blog/mailchimp_integration.html.erb
+++ b/app/views/blog/mailchimp_integration.html.erb
@@ -85,7 +85,9 @@
 
             <p>15. Create a new folder using the admin API and then we note that the new folder is created in Mailchimp too. Add to this new folder two files and when we synchronize the folders, notice that the number of file has been updated.</p>
 
-            <p>16. We are currently working on support to file upload through CenitHub. For more information, please contact us by <%= link_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %> or send us a message to the address email <a href="mailto:support@cenit.io" target="_top">support@cenit.io</a></p>
+            <p>16. We are currently working on support to file upload through CenitHub.
+              
+            <%= render 'footer' %>  
           </div>
 
         </div>
