--- a/app/views/blog/shipwire_integration.html.erb
+++ b/app/views/blog/shipwire_integration.html.erb
@@ -71,6 +71,8 @@
               <p>Remember, that you can enter in <%= link_to 'cenitsaas.com', 'http://cenitsaas.com'%> , where you will find several integrations ready for use out of the box.</p>
 
               <p>Until next video from CenitHub integration.</p>
+              
+              <%= render 'footer' %>
 
           </div>
 
