--- a/app/views/blog/using_twitter_integration_on_odoo.html.erb
+++ b/app/views/blog/using_twitter_integration_on_odoo.html.erb
@@ -81,6 +81,8 @@
             check your Twitter status.</p>
             <p>Well, that's all folks!
             See you around.</p>
+            
+            <%= render 'footer' %>
 
           </div>
 
