--- a/app/views/blog/asana_integration.html.erb
+++ b/app/views/blog/asana_integration.html.erb
@@ -4,7 +4,7 @@
   <div id="blogpost-wrapper">
     <div class="container">
       <div class="row">
-        <div class="col-md-10 post">
+        <div class="col-sm-10 post">
           <div class="video">
             <div class="iframe-wrapper">
               <iframe src="https://www.youtube.com/embed/elm9icrGDPw" width="778" height="439" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -13,7 +13,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-10 post">
+        <div class="col-sm-10 post">
           <div class="title">
             <%= title %>
           </div>
@@ -78,7 +78,7 @@
 
             <p>That’s all, I hope that you have found interesting and useful this material.</p> 
 
-            <p>For more information, please contact us by <%= link_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %> or send us a message to the address email <a href="mailto:support@cenit.io" target="_top">support@cenit.io</a></p>
+            <%= render 'footer' %>
             
           </div>
 
