--- a/app/views/blog/cenit_api_collections_for_google_services.html.erb
+++ b/app/views/blog/cenit_api_collections_for_google_services.html.erb
@@ -4,14 +4,14 @@
   <div id="blogpost-wrapper">
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-sm-12">
           <div class="main-pic">
             <%= image_tag 'blog/cenit_google_api_collection.png', :alt => 'commits first year', class: "img-responsive" %>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-10 post">
+        <div class="col-sm-10 post">
           <div class="title">
             <%= title %>
           </div>
@@ -169,10 +169,12 @@
               integrations very much easier, so follow us to get the latest news
               about Cenit Collections, we will come very soon with more of that.
             </p>
-
-            <p>For more information, please contact us by <%= link_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %> or send us a message to the email address <a href="mailto:support@cenit.io" target="_top">support@cenit.io</a></p>
+            <%= render 'footer' %>
           </div>
+          
+
         </div>
+        
       </div>
     </div>
   </div>
