--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -5,7 +5,7 @@
   <div id="posts">
     <div class="container">
       <div class="row">
-        <div class="col-md-9">
+        <div class="col-sm-9">
 
           <div class="post">
             <%= link_to cenit_api_collections_for_google_services_blog_index_path, class: "pic" do %>
@@ -177,19 +177,7 @@
           </div>
 
         </div>
-        <div class="col-md-3 sidebar">
-          <div class="best-hits">
-            <strong>Articles</strong>
-            <%= link_to 'Cenit API Collections for Google Services', cenit_api_collections_for_google_services_blog_index_path, data: { no_turbolink: true } %>
-            <%= link_to 'Screencast | Asana Integration on CenitSaaS', asana_integration_blog_index_path, data: { no_turbolink: true } %>
-            <%= link_to 'Screencast | Mailchimp Integration on CenitSaaS', mailchimp_integration_blog_index_path, data: { no_turbolink: true } %>
-            <%= link_to "Screencast | Part III: Using Cenit's Twitter Integration on Odoo", using_twitter_integration_on_odoo_blog_index_path, data: { no_turbolink: true } %>
-            <%= link_to "Screencast | Part II: Installing Cenit's Twitter Integration on Odoo", installing_twitter_integration_on_odoo_blog_index_path, data: { no_turbolink: true } %>
-            <%= link_to "Screencast | Part I: Cenit Integrations Client on Odoo", cenit_integration_client_on_odoo_blog_index_path, data: { no_turbolink: true } %>
-            <%= link_to 'Screencast | Shipwire Integration on CenitSaaS', shipwire_integration_blog_index_path, data: { no_turbolink: true } %>
-            <%= link_to 'CenitSaaS - 1 year since kick off', first_anniversary_blog_index_path, data: { no_turbolink: true } %>
-          </div>
-        </div>
+        <%= render 'menu' %>
       </div>
     </div>
   </div>
