change md by sm

--- a/app/views/blog/first_anniversary.html.erb
+++ b/app/views/blog/first_anniversary.html.erb
@@ -5,14 +5,14 @@
   <div id="blogpost-wrapper">
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-sm-12">
           <div class="main-pic">
             <%= image_tag 'blog/first_anniversary.png', :alt => 'commits first year', class: "img-responsive" %>
           </div>          
         </div>
       </div>
       <div class="row">
-        <div class="col-md-10 post">
+        <div class="col-sm-10 post">
           <div class="title">
             CenitSaaS - 1 year since kick off
           </div>
