--- a/app/views/blog/mailchimp_integration.html.erb
+++ b/app/views/blog/mailchimp_integration.html.erb
@@ -5,7 +5,7 @@
   <div id="blogpost-wrapper">
     <div class="container">
       <div class="row">
-        <div class="col-md-10 post">
+        <div class="col-sm-10 post">
           <div class="video">
             <div class="iframe-wrapper">
               <iframe src="https://www.youtube.com/embed/dp_QOh0F23Y" width="778" height="439" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -14,7 +14,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-10 post">
+        <div class="col-sm-10 post">
           <div class="title">
             <%= title %>
           </div>
