--- a/app/views/shared/_chart.html.erb
+++ b/app/views/shared/_chart.html.erb
@@ -10,23 +10,25 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="tabs">
-            <div class="tab monthly active">
-              <span>Pay Week</span>
+            <div class="tab weekly active">
+              <span>Pay Weekly</span>
             </div>
-            <div class="tab anually">
+            <div class="tab monthly">
               <span>
                 Pay Monthly
                 <small>20% off</small>
               </span>
             </div>
           </div>
-          <div class="plans clearfix">
+          <div class="plans weekly clearfix">
             <div class="plan col-sm-4">
               <div class="header">
                 <span class="icon entypo-user"></span>
-                25 hours
-                <div class="price" data-weekly="$800/weekly">
-                  $800/week
+                <span class="hidden-monthly">25 hours</span>
+                <span class="hidden-weekly">100 hours</span>
+                <div class="price" data-weekly="$ 800/week" data-monthly="$2 560/month">
+                  <span class="hidden-monthly">$800/week</span>
+                  <span class="hidden-weekly">$2 560/month</span>
                 </div>
               </div>
               <div class="specs">
@@ -39,16 +41,31 @@
                 <div class="spec">
                   <span class="variable">Configuration</span> setting options
                 </div>
-                <div class="spec">&nbsp;</div>
-                <div class="spec">&nbsp;</div>
+                <div class="spec hidden-weekly">
+                  <span class="variable">Customization</span> forms and fields
+                </div>
+                <div class="spec hidden-weekly">
+                  <span class="variable">Importation</span> form severals sources
+                </div>
+                <div class="spec hidden-weekly">
+                  <span class="variable">Integration</span> with internet services
+                </div>
+                <div class="spec hidden-weekly">
+                  <span class="variable">Migration</span> data of previous versions
+                </div>
+                <div class="spec hidden-weekly">
+                  <span class="variable">Creation</span> of new add-ons
+                </div>
               </div>
             </div>
             <div class="plan col-sm-4 middle">
               <div class="header">
                 <span class="icon entypo-users"></span>
-                50 hours
-                <div class="price">
-                  $1 700/week
+                <span class="hidden-monthly">50 hours</span>
+                <span class="hidden-weekly">200 hours</span>
+                <div class="price" data-weekly="$1 700/week" data-monthly="$5 440/month">
+                  <span class="hidden-monthly">$1 700/week</span>
+                  <span class="hidden-weekly">$5 440/month</span>
                 </div>
               </div>
               <div class="specs">
@@ -67,16 +84,27 @@
                 <div class="spec">
                   <span class="variable">Importation</span> form severals sources
                 </div>
-                <div class="spec">&nbsp;</div>
-                <div class="spec">&nbsp;</div>
+                <div class="spec hidden-weekly">
+                  <span class="variable">Integration</span> with internet services
+                </div>
+                <div class="spec hidden-weekly">
+                  <span class="variable">Migration</span> data of previous versions
+                </div>
+                <div class="spec hidden-weekly">
+                  <span class="variable">Creation</span> of new add-ons
+                </div>
+                <div class="spec hidden-monthly">&nbsp;</div>
+                <div class="spec hidden-monthly">&nbsp;</div>
               </div>
             </div>
             <div class="plan col-sm-4">
               <div class="header">
                 <span class="icon entypo-suitcase"></span>
-                100 hours
-                <div class="price">
-                  $3 050/two weeks
+                <span class="hidden-monthly">100 hours</span>
+                <span class="hidden-weekly">400 hours</span>
+                <div class="price" data-weekly="$3 050/two weeks" data-monthly="$9 760/two months">
+                  <span class="hidden-monthly">$3 050/two weeks</span>
+                  <span class="hidden-weekly">$9 150/two months</span>
                 </div>
               </div>
               <div class="specs">
