--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
  * file per style scope.
  *
  *= require bootstrap/bootstrap.min
+ *= require bootstrap/bootstrap-tour.min
 
  *= require compiled/theme
  *= require vendor/font-awesome
