--- a/app/views/blog/gmail_cenit_collection.html.erb
+++ b/app/views/blog/gmail_cenit_collection.html.erb
@@ -23,9 +23,8 @@
           <div class="content">
 
             <p>
-              We have recently
-              bring <%= link_to 'the set of API collections to connect with the Google services', gmail_cenit_collection_blog_index_path, data: { no_turbolink: true } %>
-              ,
+              We have recently bring the set of
+              <%= link_to 'API collections to connect with the Google services', gmail_cenit_collection_blog_index_path, data: { no_turbolink: true } %>,
               to let you access an entire API through a single authorization point, with an offline
               and background running logic for the automatic management of the OAuth 2.0 protocol implementation
               provided by Google.
@@ -135,79 +134,21 @@
               and then a very much easier way will be available for the community.
             </p>
 
-
-
-            <p align="center">
-              <%= image_tag 'blog/webhook_submit.png', :alt => 'shared collections', class: "img-responsive" %>
-            </p>
-
-            <p>
-              When the Submit action is executed the first step is to choose the
-              connection to be used for the webhook submission. First you have to select the
-              default connection and click next, then Cenit builds a form to let
-              you specify the parameter values that are initially fulfilled with
-              the default ones.</p>
-
-            <p>
-              Cenit is a concurrent system so every action with a time-processing
-              charge is executed asynchronous. So once you have submitted your data
-              just go to the Notification model and check if your submission task
-              is done. The API responses are stored as notification attachments so
-              click them to see the content:</p>
-
-            <p align="center">
-              <%= image_tag 'blog/notification_attachment.png', :alt => 'shared collections', class: "img-responsive" %>
-            </p>
-
-            <p>
-              And that’s all, you have successfully connected with an API through Cenit.</p>
-
             <h1 style="line-height: 100%; page-break-before: auto; page-break-after: auto">
-              Swagger 2.0 Cenit Collection</h1>
+              How it's works?
+            </h1>
 
             <p>
-              By combining every scheme with the basePath on a Swagger 2.0
-              specification, the possible URLs that API can
-              accept can be defined. Those URLs can be mapped into the Cenit Connection model. The
-              paths specification ,on the other hand, should be mapped into the
-              Cenit Webhook model.</p>
+              ...
+            </p>
 
-            <p>
-              Both models, Connection and Webhook support the specification of
-              parameters, which are of three kinds: headers, parameters and
-              template parameters. Swagger 2.0 API specification characterize every
-              parameter with the location entry 'in', which specify where the
-              parameter should be used: header query or path. While 'header'
-              parameters are semantically the same concept on Swagger 2.0 and
-              Cenit, the 'query' parameters should be mapped to 'parameters' and
-              the 'path' parameters should be mapped to 'template parameters'.</p>
-
-            <p>
-              Swagger 2.0 uses a JSON Schema like specification to describe the
-              structure of the API resources and the format of parameters. Cenit
-              supports the definitions of data types based on JSON schema, so all
-              the definitions of a Swagger 2.0 can be mapped into a Library of Data
-              Types.</p>
-
-            <p>
-              Security definitions can be mapped into Cenit Authorizations. In the
-              case of OAuth2 security protocol, the API may define different scopes
-              for each path. Cenit can associate authorizations to connections and
-              webhooks. For convenience, all paths OAuth2 scopes can be factorized
-              and included in a single OAuth2 Authorization for the entire API.
-              By assigning such authorization to the default API connection all
-              webhooks become automatically authorized.</p>
 
             <h1 style="line-height: 100%; page-break-before: auto; page-break-after: auto"><a name="h.upe549z9qgg5"></a>
-              What’s next</h1>
+              What’s next
+            </h1>
 
             <p>
-              Interacting with an API may be a little awkward. For example, the
-              Gmail API exchanges email data in MIME format, encoded following a
-              base64 protocol. We are working on Cenit Collections built on top of the
-              API ones to bring you a set of intuitive collection to make
-              integrations very much easier, so follow us to get the latest news
-              about Cenit Collections, we will come very soon with more of that.
+              ...
             </p>
 
             <p>For more information, please contact us
