removed odoo links

--- a/app/views/shared/_prices.html.erb
+++ b/app/views/shared/_prices.html.erb
@@ -22,8 +22,8 @@
               team members
             </div>
             <div class="spec">
-              <span class="variable">Odoo</span>
-              online ERP & CRM 
+              <span class="variable">Shared</span>
+              Collections 
             </div>
             <div class="spec">
               <span class="variable">5 GB</span>
