--- a/app/views/shared/_page_header.html.erb
+++ b/app/views/shared/_page_header.html.erb
@@ -9,10 +9,10 @@
              <%= link_to "Data Integrator", cenithub_url(cenit_app), class: 'button button_hub' %>
            <% end %>
            <% if (odoo_app = Doorkeeper::Application.where(name: 'odoo').first).present? %>
-             <%= link_to "ERP & CRM", cenitodoo_url(current_user, odoo_app), class: 'button button_erp' %>
+             <% link_to "ERP & CRM", cenitodoo_url(current_user, odoo_app), class: 'button button_erp' %>
            <% end %>
           <% else %>
-            <%= link_to 'Data Integrator', new_user_session_path, class: 'button button_hub' %>
+            <% link_to 'Data Integrator', new_user_session_path, class: 'button button_hub' %>
             <%= link_to 'ERP & CRM', new_user_session_path, class: 'button button_erp' %>
           <% end %>
         </div>
