change slide images

--- a/app/views/shared/_page_header.html.erb
+++ b/app/views/shared/_page_header.html.erb
@@ -24,17 +24,35 @@
                 <div class="btn-nav prev"></div>
                 <div class="btn-nav next"></div>
                 <div class="slide active">
-                  <%= image_tag 'screenshots/cenithub-admin.png', :alt => 'CenitHub Admin', style: "width: 700px; height: 360px;" %>
+                  <%= image_tag 'screenshots/cenithub-shared.png', :alt => 'CenitHub Shared Collections', style: "width: 700px; height: 360px;" %>
                 </div>
                 <div class="slide">
                   <%= image_tag 'screenshots/cenithub-flows.png', :alt => 'CenitHub Flows', style: "width: 700px; height: 360px;" %>
                 </div>
-                <div class="slide">
-                  <%= image_tag 'screenshots/cenithub-shared.png', :alt => 'CenitHub Shared Collections', style: "width: 700px; height: 360px;" %>
-                </div>
+
                 <div class="slide">
                   <%= image_tag 'screenshots/cenithub-translators.png', :alt => 'CenitHub Translators', style: "width: 700px; height: 360px;" %>
                 </div>
+                <div class="slide">
+                  <%= image_tag 'screenshots/cenithub-webhooks.png', :alt => 'CenitHub Webhooks', style: "width: 700px; height: 360px;" %>
+                </div>
+                <div class="slide">
+                  <%= image_tag 'screenshots/cenithub-events.png', :alt => 'CenitHub Events', style: "width: 700px; height: 360px;" %>
+                </div>
+                <div class="slide">
+                  <%= image_tag 'screenshots/cenithub-oauthclients.png', :alt => 'CenitHub Oauth Clients', style: "width: 700px; height: 360px;" %>
+                </div>
+                <div class="slide">
+                  <%= image_tag 'screenshots/cenithub-datatypes.png', :alt => 'CenitHub Data Types', style: "width: 700px; height: 360px;" %>
+                </div>
+                <div class="slide">
+                  <%= image_tag 'screenshots/cenithub-storage.png', :alt => 'CenitHub Storage', style: "width: 700px; height: 360px;" %>
+                </div>
+                <div class="slide">
+                  <%= image_tag 'screenshots/cenithub-admin.png', :alt => 'CenitHub Admin', style: "width: 700px; height: 360px;" %>
+                </div>
+
+
                 
               </div>
             </div>  
