--- a/app/views/shared/_page_header.html.erb
+++ b/app/views/shared/_page_header.html.erb
@@ -12,8 +12,8 @@
              <% link_to "ERP & CRM", cenitodoo_url(current_user, odoo_app), class: 'button button_erp' %>
            <% end %>
           <% else %>
-            <% link_to 'Data Integrator', new_user_session_path, class: 'button button_hub' %>
-            <%= link_to 'ERP & CRM', new_user_session_path, class: 'button button_erp' %>
+            <%= link_to 'Data Integrator', new_user_session_path, class: 'button button_hub' %>
+            <% link_to 'ERP & CRM', new_user_session_path, class: 'button button_erp' %>
           <% end %>
         </div>
         
