Further restoring of Odoo related links

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
 <%= render partial: 'shared/splitter' %>
 <%= render partial: 'shared/conversions' %>
 <%= render partial: 'shared/splitter' %>
-<% render partial: 'shared/odoo' %>
+<%= render partial: 'shared/odoo' %>
 <%= render partial: 'shared/sign_up_for_free', locals: {link: :odoo} %>
 <%= render partial: 'shared/prices' %>
 <%= render partial: 'shared/chart' %>
