fisrt stuff for article multi-channels messaging

--- a/app/views/blog/_menu.html.erb
+++ b/app/views/blog/_menu.html.erb
@@ -1,6 +1,7 @@
 <div class="col-sm-3 sidebar">
   <div class="best-hits">
     <strong>Articles</strong><br />
+    <%= link_to 'Multi-Channel Messaging with Cenit', multi_channel_messaging_blog_index_path, data: { no_turbolink: true } %>
     <%= link_to 'Cenit API Collections for Google Services', cenit_api_collections_for_google_services_blog_index_path, data: { no_turbolink: true } %>
     <%= link_to 'Screencast | Asana Integration on CenitSaaS', asana_integration_blog_index_path, data: { no_turbolink: true } %>
     <%= link_to 'Screencast | Mailchimp Integration on CenitSaaS', mailchimp_integration_blog_index_path, data: { no_turbolink: true } %>
