Post Multi-Channel Messaging with Cenit.

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -9,7 +9,7 @@
           
           <div class="post">
             <%= link_to multi_channel_messaging_blog_index_path, class: "pic" do %>
-                <%= image_tag 'blog/cenit_google_api_collection.png', :alt => 'multi-channel messaging', class: "img-responsive" %>
+                <%= image_tag 'blog/multichannel/header.png', :alt => 'multi-channel messaging', class: "img-responsive" %>
             <% end %>
 
             <div class="title">
@@ -17,7 +17,7 @@
             </div>
             <div class="author">
               <%= image_tag 'team/maria_esther.jpg', :alt => 'author', class: "avatar" %>
-              By Maria Esther, Mar 1, 2016
+              By Maria Esther Guirola, Mar 1, 2016
             </div>
             <p class="intro">
               In this post we are going to see how we can send messages to different channels through Cenit. We'll see how Cenit manage different authentication modes like basic authentication, Oauth 1.0 and Oauth 2.0.
