Using font-awesome from gem

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,7 @@
  *= require bootstrap/bootstrap-tour.min
 
  *= require compiled/theme
- *= require vendor/font-awesome
+ *= require font-awesome
  *= require vendor/animate
  *= require vendor/style
 
