added video to gmail post

--- a/app/views/blog/gmail_cenit_collection.html.erb
+++ b/app/views/blog/gmail_cenit_collection.html.erb
@@ -163,6 +163,8 @@
               background of how your Gmail Collection is configured.
             </p>
 
+             <%= render partial: 'shared/gmail_video', locals: { title: 'The easy way to connect with the <strong>Gmail API</strong>'.html_safe } %>
+
             <h1 style="line-height: 100%; page-break-before: auto; page-break-after: auto">
               How it works
             </h1>
