added videos to multi-channels messaging

--- a/app/views/blog/gmail_cenit_collection.html.erb
+++ b/app/views/blog/gmail_cenit_collection.html.erb
@@ -163,7 +163,7 @@
               background of how your Gmail Collection is configured.
             </p>
 
-             <%= render partial: 'shared/gmail_video', locals: { title: 'The easy way to connect with the <strong>Gmail API</strong>'.html_safe } %>
+             <%= render partial: 'shared/video', locals: { title: 'The easy way to connect with the <strong>Gmail API</strong>'.html_safe, video: 'https://www.youtube.com/embed/oBmGtKd4Ia4' } %>
 
             <h1 style="line-height: 100%; page-break-before: auto; page-break-after: auto">
               How it works
