added video for twitter integration

--- a/app/views/blog/multi_channel_messaging.html.erb
+++ b/app/views/blog/multi_channel_messaging.html.erb
@@ -172,7 +172,7 @@
             </p>
 
             <br>
-             <%= render partial: 'shared/video', locals: { title: 'The easy way to connect with the <strong>Twilio API</strong>'.html_safe, video: 'https://www.youtube.com/embed/jTBmw8AhWIE' } %>
+             <%= render partial: 'shared/video', locals: { title: '<strong>Twitter Integration</strong> using CenitSaaS'.html_safe, video: 'https://www.youtube.com/embed/jTBmw8AhWIE' } %>
             <br>
 
             <h3>
