--- a/app/views/blog/gmail_cenit_collection.html.erb
+++ b/app/views/blog/gmail_cenit_collection.html.erb
@@ -130,7 +130,7 @@
             </p>
 
             <p>
-              Because CenitHub automatically manages your OAuth 2.0 access and refreshes tokens, you don not have to
+              Because CenitHub automatically manages your OAuth 2.0 access and refreshes tokens, you do not have to
               worry in the future about being authorized again. Just continue sending emails in a simple format through
               the CenitHub API, until you explicitly revoke your authorization with your CenitSaaS account or in your
               Google Acount configuration.
@@ -228,7 +228,7 @@
             </div>
 
             <p>
-              By default, your Gemail Collection defines the flow Send Created Message, which is triggered when a MIME
+              By default, your Gmail Collection defines the flow Send Created Message, which is triggered when a MIME
               Message is created. Every flow is associated with a
               <%=
                   link_to 'translator',
