--- a/app/views/shared/_page_header.html.erb
+++ b/app/views/shared/_page_header.html.erb
@@ -3,17 +3,12 @@
     <div class="container">
       <h1 class="hero-text animated fadeIn"><%= title %></h1>
       <% if home %>
-         <div class="cta animated fadeIn">
-          <% if user_signed_in? %>
-           <% if (cenit_app = Doorkeeper::Application.where(name: 'Cenit').first).present? %>
-             <%= link_to "Data Integrator", cenithub_url(cenit_app), class: 'button button_hub' %>
-           <% end %>
-           <% if (odoo_app = Doorkeeper::Application.where(name: 'odoo').first).present? %>
-             <%= link_to "ERP & CRM", cenitodoo_url(current_user, odoo_app), class: 'button button_erp' %>
-           <% end %>
-          <% else %>
-            <%= link_to 'Data Integrator', new_user_session_path, class: 'button button_hub' %>
-            <%= link_to 'ERP & CRM', new_user_session_path, class: 'button button_erp' %>
+        <div class="cta animated fadeIn">
+          <% if (cenit_app = Doorkeeper::Application.where(name: 'Cenit').first).present? %>
+            <%= link_to "Data Integrator", cenithub_url(cenit_app), class: 'button button_hub' %>
+          <% end %>
+          <% if (odoo_app = Doorkeeper::Application.where(name: 'odoo').first).present? %>
+            <%= link_to "ERP & CRM", cenitodoo_url(), class: 'button button_erp' %>
           <% end %>
         </div>
         
