remove odoo for new users

--- a/app/views/shared/_chart.html.erb
+++ b/app/views/shared/_chart.html.erb
@@ -45,7 +45,7 @@
                   <span class="variable">Customization</span> forms and fields
                 </div>
                 <div class="spec hidden-weekly">
-                  <span class="variable">Importation</span> form severals sources
+                  <span class="variable">Import</span> from several sources
                 </div>
                 <div class="spec hidden-weekly">
                   <span class="variable">Integration</span> with internet services
@@ -82,7 +82,7 @@
                   <span class="variable">Customization</span> forms and fields
                 </div>
                 <div class="spec">
-                  <span class="variable">Importation</span> form severals sources
+                  <span class="variable">Import</span> from several sources
                 </div>
                 <div class="spec hidden-weekly">
                   <span class="variable">Integration</span> with internet services
@@ -121,7 +121,7 @@
                   <span class="variable">Customization</span> forms and fields
                 </div>
                 <div class="spec">
-                  <span class="variable">Importation</span> form severals sources
+                  <span class="variable">Import</span> from several sources
                 </div>
                 <div class="spec">
                   <span class="variable">Integration</span> with internet services
