--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<% title = 'Social Data and Business Integration' %>
+<% title = 'Data and Business Integration' %>
 <%= render partial: 'shared/page_header', locals: {title: title , home: true} %>
 <%= render partial: 'shared/services' %>
 <%= render partial: 'shared/sign_up_for_free', locals: {link: :hub} %>
@@ -7,7 +7,7 @@
 <%= render partial: 'shared/splitter' %>
 <%= render partial: 'shared/conversions' %>
 <%= render partial: 'shared/splitter' %>
-<%= render partial: 'shared/odoo' %>
-<%= render partial: 'shared/sign_up_for_free', locals: {link: :odoo} %>
+<% render partial: 'shared/odoo' %>
+<% render partial: 'shared/sign_up_for_free', locals: {link: :odoo} %>
 <%= render partial: 'shared/prices' %>
 <%= render partial: 'shared/chart' %>
