--- a/app/views/terms_use/index.html.erb
+++ b/app/views/terms_use/index.html.erb
@@ -3,7 +3,7 @@
       <div class="col-md-12">
         <h2><b>Terms of Use</b></h2>
         <p>
-          Thank you for using CenitSaaS! These terms of service (the “Terms”) govern your access to and use of CenitSaaS   (“we” or “our”) websites and services (the “Services”), so please carefully read them before using the Services.</p>
+          Thank you for using Cenit! These terms of service (the “Terms”) govern your access to and use of CenitSaaS   (“we” or “our”) websites and services (the “Services”), so please carefully read them before using the Services.</p>
         <p>
           By using the Services you agree to be bound by these Terms. If you are using the Services on behalf of an organization, you are agreeing to these Terms for that organization and promising that you have the authority to bind that organization to these terms. In that case, “you” and “your” will refer to that organization.</p>
         <p>
